--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,7 @@
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.13</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
