--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,6 +44,7 @@
 		<url-pattern>*.re</url-pattern>
 		<url-pattern>*.st</url-pattern>
 		<url-pattern>*.qs</url-pattern>
+		<url-pattern>*.up</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
