--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,6 +45,7 @@
 		<url-pattern>*.st</url-pattern>
 		<url-pattern>*.qs</url-pattern>
 		<url-pattern>*.up</url-pattern>
+		<url-pattern>*.mn</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
