--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,40 @@
 			<artifactId>thumbnailator</artifactId>
 			<version>0.4.8</version>
 		</dependency>
+		
+		<!-- 아임포트 결제를 위해 필요한 설정 시작 -->
+      <!-- Jackson JSON Mapper 시작 -->
+      <!-- jackson-core springframework 5.X.X에 사용 -->
+      <dependency>
+         <groupId>com.fasterxml.jackson.core</groupId>
+         <artifactId>jackson-databind</artifactId>
+         <version>2.9.10.1</version>
+      </dependency>
+      <!-- Jackson JSON Mapper 끝 -->
+      
+      <!-- 제이슨 파싱 -->
+      <dependency>
+         <groupId>com.googlecode.json-simple</groupId>
+         <artifactId>json-simple</artifactId>
+         <version>1.1.1</version>
+      </dependency>
+      
+      <!-- HttpCore : HTTP 프로토콜을 이용해서 데이터를 전송할 수 있는 로우 레벨의 기능으 제공 -->   
+      <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
+      <dependency>
+         <groupId>org.apache.httpcomponents</groupId>
+         <artifactId>httpcore</artifactId>
+         <version>4.4.6</version>
+      </dependency>
+      
+      <!-- HttpCore를 기반으로 클라이언트의 동작을 구현한 라이브러리. HttpRequest와 같은 기능을 제공 -->
+      <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+      <dependency>
+         <groupId>org.apache.httpcomponents</groupId>
+         <artifactId>httpclient</artifactId>
+         <version>4.5.2</version>
+      </dependency>
+      <!-- 아임포트 결제를 위해 필요한 설정 끝 -->    
 		      
 	</dependencies>
     <build>
