--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,7 @@
 		<url-pattern>*.qs</url-pattern>
 		<url-pattern>*.up</url-pattern>
 		<url-pattern>*.mn</url-pattern>
+		<url-pattern>*.ct</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
