--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -14,6 +14,7 @@ encoding//src/main/webapp/WEB-INF/views/mypage/admin_mypage.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/mypage/new_mypage.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/notice/notice_board_list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/qna/qna_board_list.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/qna/qna_board_modify.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/qna/qna_board_write.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/review/review_list_grid.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/sellerpage/store_reg_form.jsp=UTF-8
