--- a/pom.xml
+++ b/pom.xml
@@ -299,7 +299,21 @@
          <artifactId>httpclient</artifactId>
          <version>4.5.2</version>
       </dependency>
-      <!-- 아임포트 결제를 위해 필요한 설정 끝 -->    
+      <!-- 아임포트 결제를 위해 필요한 설정 끝 --> 
+
+	<!-- Web Socket -->
+
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>5.0.7.RELEASE</version>
+		</dependency>  
 		      
 	</dependencies>
     <build>
